# benchmark

./: .gitmodules  BCLOUD  CMakeLists.txt  Makefile  README.md  build.sh  dispose.sh  env.sh  test.sh
bench/: CMakeLists.txt
bench/src/: bench.cpp
script/: add_vec_header_for_clickhouse.sh  change_include.py  rename.sh
src/Columns/: ColumnConst.cpp  ColumnConst.h  ColumnNullable.cpp  ColumnNullable.h  ColumnVector.cpp  ColumnVector.h  ColumnsCommon.cpp  IColumn.cpp  IColumn.h
src/Common/: Allocator.h  Arena.h  Exception.cpp  Exception.h  PODArray.h
src/Core/: Block.cpp  Block.h  BlockInfo.cpp  BlockInfo.h  ColumnWithTypeAndName.cpp  ColumnWithTypeAndName.h  Field.cpp  Field.h  NamesAndTypes.h
src/DataTypes/: DataTypeNumberBase.cpp  DataTypeNumberBase.h  DataTypesNumber.cpp  IDataType.cpp  IDataType.h  NestedUtils.cpp
src/common/: compiler_util.h
src/gen_cpp/: data.pb.cc  data.pb.h
src/vec/AggregateFunctions/: AggregateFunctionCount.cpp  AggregateFunctionCount.h  AggregateFunctionNothing.h  AggregateFunctionNull.cpp  AggregateFunctionNull.h  AggregateFunctionSimpleFactory.h  FactoryHelpers.h  IAggregateFunctionCombinator.h
src/vec/Common/: StringBuffer.hpp
src/vec/Core/: NamesAndTypes.cpp  callOnTypeIndex.h
src/vec/DataTypes/: DataTypeFactory.hpp  DataTypeNothing.h  DataTypeNumberBase.cpp  DataTypeNumberBase.h  DataTypesDecimal.h  IDataType.cpp  IDataType.h  data_type_string.cpp  data_type_string.h  getLeastSupertype.cpp  getLeastSupertype.h
src/vec/Functions/: FunctionBinaryArithmetic.h  FunctionCast.h  FunctionsComparison.h  FunctionsLogical.cpp  FunctionsLogical.h  greater.cpp  intDiv.cpp  intDiv.h
src/vec/aggregate_functions/: aggregate_function_distinct.cpp  aggregate_function_distinct.h  aggregate_function_min_max.h  aggregate_function_null.cpp  aggregate_function_uniq.cpp  aggregate_function_uniq.h  helpers.h  key_holder_helpers.h
src/vec/columns/: column_vector.cpp
src/vec/common/: aggregation_common.h  columns_hashing.h  columns_hashing_impl.h  libdivide.h  pod_array.h
src/vec/common/hash_table/: hash.h  hash_map.h  hash_set.h  hash_table.h  hash_table_allocator.h  hash_table_key_holder.h
src/vec/core/: block.cpp  block.h  defines.h  sort_block.cpp  sort_cursor.h  sort_description.h
src/vec/functions/: function_binary_arithmetic.h  int_div.cpp  int_div.h  modulo.cpp  plus.cpp  simple_function_factory.h
src/vec/io/: io_helper.h
test/: abs_function_test.cpp  agg_test.cpp  binary_arithmetic_test.cpp  block_test.cpp  cast_function_test.cpp  column_const_test.cpp  column_decimal_test.cpp  column_string_test.cpp  column_vector_test.cpp  comparation_function_test.cpp  cow_test.cpp  exception_test.cpp  hash_table_test.cpp  permutation_test.cpp  podarray_test.cpp
